fixed clear button text spacing

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ button:focus {
      flex-direction: column;
      justify-content: center;
      align-items: center;
+     padding: 0;
 }
 
 #clear-p {
